# MoreDataframes

./: ComputeNgrams.py  EncodeDataframe.py  MoreDataframes.py  README.md  pyproject.toml  readme.md  requirements_dev.txt  requirements_mypy.txt  setup.cfg  tox.ini
speedtests/: readme.md  run_speedtest.py  speedtest_binning.py  speedtest_minmax.py  speedtester.py
src/moredataframes/: __init__.py  constants.py  encode.py  encodings.py  mdf_core.py  mdf_typing.py
src/moredataframes/constants/: __init__.py  code_constants.py
src/moredataframes/encodings/: __init__.py  encoding_functions.py
src/moredataframes/encodings/binning/: MDLP.py  __init__.py  binning_func.py  caim.py  chi_merge.py  decode_binning.py  decode_bins.py  decode_bins_func.py  simple_binning.py  utils.py
src/moredataframes/errors/: __init__.py  error_classes.py
src/moredataframes/mdfutils/: __init__.py  conversion.py  param_utils.py  typing.py
tests/: quick_tests.py  test_binning.py  test_encodings.py  test_utils.py
